# battleship

./: .gitignore  LICENSE  README.md  RandomAgent.py  TrainingSets.py  Ui.py  battleship.py  copycat_weights  log  pyproject.toml  showcase_results.py  training.py
ships/: 00000000.pos  00000001.pos  00000002.pos  00000003.pos  00000004.pos  00000005.pos  00000006.pos  00000007.pos  00000008.pos  00000009.pos  00000010.pos  00000011.pos  00000012.pos  00000013.pos  00000014.pos  00000015.pos  00000016.pos  00000017.pos  00000018.pos  00000019.pos  00000020.pos  00000021.pos  00000022.pos  00000023.pos  00000024.pos  00000025.pos  00000026.pos  00000027.pos  00000028.pos  00000029.pos  00000030.pos  00000031.pos  00000032.pos  00000033.pos  00000034.pos  00000035.pos  00000036.pos  00000037.pos  00000038.pos  00000039.pos  (+350 more)
tests/: test_battle.py  test_learning.py  test_place_ships.py
training/: generator.py
unittests/: test_place_ships.py  test_probe.py  test_server.py  test_smart_agent.py
